# microweb

./: .gitignore  README.md  microweb.py  pyproject.toml
microweb/: __init__.py  __main__.py
